# Datathon26

./: .gitignore  pyproject.toml
src/: EDA.ipynb  cleaning.ipynb  features.ipynb  training.ipynb  visualization.ipynb
